test/force-app/main/default/objects/Account/fields/ADRES_ID_entete_TECH__c.field-meta.xml
<CustomField>
    <fullName>ADRES_ID_entete_TECH__c</fullName>
    <description>Champ technique alimenté par flow. Consommé par TrivisoAccountMapper pour produire la balise ADRES_ID_entete du XML exporté vers Triviso.</description>
    <inlineHelpText>Valeur technique de l&apos;en-tête envoyée à Triviso. Ne pas saisir manuellement : alimenté par flow.</inlineHelpText>
    <label>ADRES_ID_entete_TECH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>