test/force-app/main/default/objects/Account/fields/Adresse_compte__c.field-meta.xml
<CustomField>
    <fullName>Adresse_compte__c</fullName>
    <label>Adresse</label>
    <type>Address</type>
</CustomField>