test/force-app/main/default/objects/Account/fields/Case_postale__c.field-meta.xml
<CustomField>
    <fullName>Case_postale__c</fullName>
    <label>Case postale</label>
    <length>225</length>
    <type>Text</type>
</CustomField>