test/force-app/main/default/objects/Account/fields/Compte_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Compte_Facturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte facturation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>