test/force-app/main/default/objects/Account/fields/Conditions_paiement__c.field-meta.xml
<CustomField>
    <fullName>Conditions_paiement__c</fullName>
    <label>Conditions paiement</label>
    <length>225</length>
    <type>Text</type>
</CustomField>