test/force-app/main/default/objects/Account/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Telephone_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>