test/force-app/main/default/objects/Account/fields/Genre_de_client__c.field-meta.xml
<CustomField>
    <fullName>Genre_de_client__c</fullName>
    <label>Genre de client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architecte</fullName>
            </value>
            <value>
                <fullName>Entreprise</fullName>
            </value>
            <value>
                <fullName>Entr.générale</fullName>
                <label>Entr.Générale</label>
            </value>
            <value>
                <fullName>Inst.Publique</fullName>
                <label>Instit.Publique</label>
            </value>
            <value>
                <fullName>S-traitance</fullName>
                <label>S-traitant</label>
            </value>
            <value>
                <fullName>Privé</fullName>
            </value>
            <value>
                <fullName>Lieu</fullName>
            </value>
            <value>
                <fullName>Filiale</fullName>
            </value>
            <value>
                <fullName>fournisseur</fullName>
                <label>Fournisseur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>