test/force-app/main/default/objects/Account/fields/IDE_OFS__c.field-meta.xml
<CustomField>
    <fullName>IDE_OFS__c</fullName>
    <label>IDE OFS</label>
    <type>TextArea</type>
</CustomField>