test/force-app/main/default/objects/Account/fields/Lettre_Ent_te__c.field-meta.xml
<CustomField>
    <fullName>Lettre_Ent_te__c</fullName>
    <label>Lettre Entête</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Madame,</fullName>
            </value>
            <value>
                <fullName>Maître</fullName>
                <label>Maître,</label>
            </value>
            <value>
                <fullName>Messieurs,</fullName>
            </value>
            <value>
                <fullName>Madame, Monsieur,</fullName>
            </value>
            <value>
                <fullName>Monsieur,Madame</fullName>
                <label>Monsieur, Madame,</label>
            </value>
            <value>
                <fullName>Mesdames</fullName>
                <label>Mesdames,</label>
            </value>
            <value>
                <fullName>Mesdames, Messieurs</fullName>
            </value>
            <value>
                <fullName>Monsieur,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>