test/force-app/main/default/objects/Account/fields/No_EORI__c.field-meta.xml
<CustomField>
    <fullName>No_EORI__c</fullName>
    <label>No. EORI (Import-Export)</label>
    <type>TextArea</type>
</CustomField>