test/force-app/main/default/objects/Account/fields/No_TVA_EU__c.field-meta.xml
<CustomField>
    <fullName>No_TVA_EU__c</fullName>
    <label>Autres infos</label>
    <type>TextArea</type>
</CustomField>