test/force-app/main/default/objects/Account/fields/Numero_TVA__c.field-meta.xml
<CustomField>
    <fullName>Numero_TVA__c</fullName>
    <label>No. TVA</label>
    <type>TextArea</type>
</CustomField>