test/force-app/main/default/objects/Account/fields/Registre_commerce__c.field-meta.xml
<CustomField>
    <fullName>Registre_commerce__c</fullName>
    <label>No. IDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>