test/force-app/main/default/objects/Account/fields/Statut_compte__c.field-meta.xml
<CustomField>
    <fullName>Statut_compte__c</fullName>
    <formula>IF(
Compte_Actif__c = True,
IMAGE(&quot;/resource/CompteActif&quot;, &quot;Compte Actif&quot;, 25, 25),
IMAGE(&quot;/resource/CompteInactif&quot;, &quot;Compte Inactif&quot;, 25, 25)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut compte</label>
    <type>Text</type>
</CustomField>