test/force-app/main/default/objects/Account/fields/Triviso_status__c.field-meta.xml
<CustomField>
    <fullName>Triviso_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triviso Status</label>
    <type>Checkbox</type>
</CustomField>