test/force-app/main/default/objects/Account/recordTypes/Compte_Entre_Filiale_Fournisseur.recordType-meta.xml
<RecordType>
    <fullName>Compte_Entre_Filiale_Fournisseur</fullName>
    <active>true</active>
    <description>Créer des comptes de type entreprise, filiale et fournisseur.</description>
    <label>Compte Entreprise</label>
</RecordType>