test/force-app/main/default/objects/Account/listViews/Adresse_Entreprise_FilialeFournisseurs.listView-meta.xml
<ListView>
    <fullName>Adresse_Entreprise_FilialeFournisseurs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Statut_compte__c</columns>
    <columns>Adresse_compte__City__s</columns>
    <columns>Adresse_compte__CountryCode__s</columns>
    <columns>Genre_de_client__c</columns>
    <columns>Identification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Compte_Actif__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Genre_de_client__c</field>
        <operation>equals</operation>
        <value>Filiale,fournisseur,Entreprise,Architecte,Entr.générale,Inst.Publique,S-traitance</value>
    </filters>
    <label>Compte Entreprise</label>
</ListView>