test/force-app/main/default/objects/Account/listViews/Compte_Personne.listView-meta.xml
<ListView>
    <fullName>Compte_Personne</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Statut_compte__c</columns>
    <columns>Adresse_compte__City__s</columns>
    <columns>Adresse_compte__CountryCode__s</columns>
    <columns>Genre_de_client__c</columns>
    <columns>Identification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Compte_Actif__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Genre_de_client__c</field>
        <operation>equals</operation>
        <value>Privé</value>
    </filters>
    <label>Compte Privé</label>
</ListView>