test/force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Statut_compte__c</columns>
    <columns>Adresse_compte__City__s</columns>
    <columns>Adresse_compte__CountryCode__s</columns>
    <columns>Genre_de_client__c</columns>
    <columns>Identification__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mes comptes</label>
</ListView>